# Serious-Engine

./: .gitignore  ModExt.txt  README.md
Sources/: CMakeLists.txt  Makefile  build-linux.sh  build-linux32.sh  build-linux64.sh  build-mac.sh  build-mac64.sh
Sources/DecodeReport/: DecodeReport.cpp
Sources/DedicatedServer/: DedicatedServer.cpp  StdAfx.h
Sources/Depend/: Dependency.cpp  UtilityDepend.cpp
Sources/Ecc/: Main.cpp  Main.h  Parser.cpp  Parser.y  Scanner.cpp  StdH.h  parser.h
Sources/Engine/: Engine.cpp  Engine.h  StdH.h
Sources/Engine/Base/: Anim.cpp  Anim.h  Assert.h  Base.h  CRC.cpp  CRC.h  CRCTable.cpp  CTString.cpp  Changeable.cpp  Console.cpp  Directory.cpp  ErrorReporting.cpp  FileName.cpp  FileName.h  IFeel.cpp  Input.cpp  Input.h  KeyNames.h  Lists.cpp  Memory.cpp  Parser.cpp  Parser.y  ParsingSymbols.h  Profiling.cpp  Profiling.h  ProfilingEnabled.h  ProgressHook.cpp  Protection.cpp  Protection.h  Registry.cpp  Relations.cpp  Relations.h  ReplaceFile.cpp  Scanner.cpp  Scanner.l  Serial.cpp  Shell.cpp  Shell.h  ShellTypes.cpp  Shell_internal.h  (+13 more)
Sources/Engine/Brushes/: Brush.cpp  Brush.h  BrushArchive.cpp  BrushExport.cpp  BrushIO.cpp  BrushImport.cpp  BrushMip.cpp  BrushPolygon.cpp  BrushSector.cpp  BrushShadows.cpp  BrushTriangularize.cpp
Sources/Engine/Classes/: BaseEvents.es  MovableBrushEntity.es  MovableEntity.es  MovableModelEntity.es  PlayerEntity.es
Sources/Engine/Entities/: Entity.cpp  Entity.h  EntityClass.cpp  EntityClass.h  EntityCollision.cpp  EntityCopying.cpp  EntityProperties.cpp  EntityProperties.h  FieldBSPTesting.cpp  LastPositions.cpp  NearestPolygon.cpp  PlayerCharacter.cpp
Sources/Engine/GameAgent/: GameAgent.cpp
Sources/Engine/Graphics/: Adapter.cpp  Adapter.h  Benchmark.cpp  Color.cpp  Color.h  DepthCheck.cpp  DisplayMode.cpp  DrawPort.cpp  DrawPort_Particles.cpp  DrawPort_RenderScene.cpp  Fog.cpp  Fog_internal.h  Font.cpp  GfxLibrary.cpp  GfxLibrary.h  GfxProfile.cpp  Gfx_Direct3D.cpp  Gfx_Direct3D_Colors.cpp  Gfx_Direct3D_Textures.cpp  Gfx_OpenGL.cpp  Gfx_OpenGL_Textures.cpp  Gfx_wrapper.cpp  Gfx_wrapper.h  Gfx_wrapper_OpenGL.cpp  Graphics.cpp  ImageInfo.cpp  MultiMonitor.cpp  OpenGL.h  Raster.cpp  Shader.cpp  Shader.h  ShadowMap.cpp  Stereo.cpp  Texture.cpp  TextureEffects.cpp  TextureEffects.h  TextureRender.cpp  Vertex.h  ViewPort.cpp  ViewPort.h  (+1 more)
Sources/Engine/Light/: LayerMaker.cpp  LayerMixer.cpp  LightSource.cpp
Sources/Engine/Math/: AABBox.h  FixInt.h  Float.cpp  Functions.cpp  Functions.h  Geometry.cpp  Geometry_DOUBLE.cpp  Matrix.h  OBBox.h  Object3D.cpp  Object3D.h  Object3D_CSG.cpp  Object3D_IO.cpp  ObjectSector.cpp  Placement.cpp  Placement.h  Plane.h  Projection.cpp  Projection.h  Projection_Isometric.cpp  Projection_Parallel.cpp  Projection_Perspective.cpp  Projection_Simple.cpp  Projection_Simple_DOUBLE.cpp  Quaternion.h  TextureMapping.cpp  TextureMapping.h  Vector.h
Sources/Engine/Models/: EditModel.cpp  EditModel.h  MipMaker.cpp  Model.cpp  ModelProfile.cpp  Model_internal.h  Normals.cpp  RenderModel.cpp  RenderModel_Mask.cpp  RenderModel_View.cpp  VertexGetting.cpp
Sources/Engine/Network/: ActionBuffer.cpp  Buffer.cpp  CPacket.cpp  CPacket.h  ClientInterface.cpp  CommunicationInterface.cpp  CommunicationInterface.h  Compression.cpp  Diff.cpp  MessageDispatcher.cpp  Network.cpp  NetworkMessage.cpp  NetworkMessage.h  NetworkProfile.cpp  NetworkProfile.h  Packet.cpp  PlayerBuffer.cpp  PlayerSource.cpp  PlayerTarget.cpp  Server.cpp  SessionState.cpp  SessionState.h
Sources/Engine/Rendering/: RenCache.cpp  RendASER.cpp  RendMisc.cpp  Render.cpp  Render.h  RenderAdding.cpp  RenderBrushes.cpp  RenderModels.cpp  RenderProfile.cpp  Render_internal.h  SelectOnRender.cpp
Sources/Engine/Ska/: AnimSet.cpp  AnimSet.h  Mesh.cpp  Mesh.h  ModelInstance.cpp  ModelInstance.h  ParsingSmbs.h  RMRender.cpp  RMRenderMask.cpp  Skeleton.cpp  Skeleton.h  StringTable.cpp  smcPars.y  (+1 more)
Sources/EngineGui/: DlgChooseTextureType.cpp  DlgCreateAnimatedTexture.cpp  DlgCreateEffectTexture.cpp  DlgCreateNormalTexture.cpp  DlgSelectMode.cpp  EngineGUI.cpp  FileRequester.cpp  StdH.cpp  WndDisplayTexture.cpp
Sources/Entities/: Bullet.es  Elemental.es  Fish.es  GhostBusterRay.cpp  GhostBusterRay.h  GhostBusterRay_tables.h  ModelHolder2.es  Player.es  PlayerWeapons.es  Projectile.es  PyramidSpaceShip.es  WorldBase.es
Sources/EntitiesMP/: AirElemental.es  AirShockwave.es  AmmoItem.es  AmmoPack.es  AnimationChanger.es  AnimationHub.es  AreaMarker.es  ArmorItem.es  BackgroundViewer.es  BasicEffects.es  Beast.es  BigHead.es  BlendController.es  BloodSpray.es  Boneman.es  Bouncer.es  Bullet.es  Camera.es  CameraMarker.es  CannonBall.es  CannonRotating.es  CannonStatic.es  ChainsawFreak.es  Copier.es  Counter.es  CrateBus.es  CrateRider.es  CreditsHolder.es  Damager.es  Debris.es  DebugEntityStatesDisplay.es  Demon.es  DestroyableArchitecture.es  Devil.es  DevilMarker.es  DevilProjectile.es  DoorController.es  Dragonman.es  EffectMarker.es  Effector.es  (+102 more)
Sources/GameGUIMP/: DlgConsole.cpp  DlgPlayerControls.cpp  DlgPlayerSettings.cpp  EditConsole.cpp
Sources/GameMP/: Camera.cpp  CompMessage.cpp  CompModels.cpp  Computer.cpp  Console.cpp  Controls.cpp  Game.cpp  Game.h  LCDDrawing.cpp  LCDDrawing.h  LoadingHook.cpp  Map.cpp  SessionProperties.cpp  SessionProperties.h  WEDInterface.cpp
Sources/Modeler/: ColoredButton.cpp  DlgPgInfoAttachingPlacement.cpp
Sources/SeriousSam/: CDCheck.h  CmdLine.cpp  Credits.cpp  GLSettings.cpp  LCDDrawing.cpp  LCDDrawing.h  LevelInfo.cpp  MainWindow.cpp  Menu.cpp  Menu.h  MenuGadgets.cpp  MenuPrinting.cpp  SeriousSam.cpp  SplashScreen.cpp  StdH.cpp  StdH.h  VarList.cpp
Sources/Shaders/: AddShader.cpp  AddShaderDS.cpp  BaseShader.cpp  BaseShaderDS.cpp  BaseTransparent.cpp  BaseTransparentDS.cpp  ColorShader.cpp  Common.cpp  DetailShader.cpp  DisplaceShader.cpp  InvisibleShader.cpp  MultiLayerShader.cpp  Reflection.cpp  ReflectionDS.cpp  ReftectionAndSpecular.cpp  ReftectionAndSpecularDS.cpp  Specular.cpp  SpecularDS.cpp  StdH.cpp  StdH.h  Translucent.cpp
Sources/WorldEditor/: WorldEditor.cpp
(+178 files in other folders)
